--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -142,6 +142,12 @@ div {
   justify-content: space-between;
   margin-right: var(--page-margin-right);
 }
+.btn{
+display: flex;
+flex-direction: column;
+justify-content: space-around;
+margin: 5px;
+}
 
 /* Work Image Style */
 .Work {
